# Verna-Interview

./: LICENSE  Makefile  README.md  knight.cpp  median.cpp  tdd.cpp
.github/workflows/: median-CI.yml
udp-socket/client/: CMakeLists.txt  main.cpp
udp-socket/server/: CMakeLists.txt  main.cpp
